--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
+            android:onClick="displayPage"
             android:id="@+id/nav_service_explanation"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="サービス説明"/>
